--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -1,6 +1,10 @@
-name: "CodeQL"
+name: CodeQL
 
-on: [ push ]
+on:
+  workflow_run:
+    workflows: ["GPUI CI"]
+    types:
+      - completed
 
 jobs:
   analyze:
@@ -19,27 +23,27 @@ jobs:
         language: [ 'cpp' ]
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
-    - name: Initialize CodeQL
-      uses: github/codeql-action/init@v2
-      with:
-        languages: ${{ matrix.language }}
+      - name: Initialize CodeQL
+        uses: github/codeql-action/init@v2
+        with:
+          languages: ${{ matrix.language }}
 
-    - name: Install dependencies
-      run: |
-        apt-get update &&
-        apt-get install -y boost-devel-headers cmake cmake-modules desktop-file-utils doxygen gcc-c++ glib2-devel \
-        ImageMagick-tools libkrb5-devel libldap-devel libpcre-devel libqt-mvvm-devel libsasl2-devel libsmbclient \
-        libsmbclient-devel libuuid-devel libxerces-c-devel make qt5-base-common qt5-base-devel qt5-declarative-devel \
-        qt5-tools-devel rpm-macros-cmake samba-devel xorg-xvfb xsd xvfb-run
+      - name: Install dependencies
+        run: |
+          apt-get update &&
+          apt-get install -y boost-devel-headers cmake cmake-modules desktop-file-utils doxygen gcc-c++ glib2-devel \
+          ImageMagick-tools libkrb5-devel libldap-devel libpcre-devel libqt-mvvm-devel libsasl2-devel libsmbclient \
+          libsmbclient-devel libuuid-devel libxerces-c-devel make qt5-base-common qt5-base-devel qt5-declarative-devel \
+          qt5-tools-devel rpm-macros-cmake samba-devel xorg-xvfb xsd xvfb-run
 
-    - name: Configure cmake
-      run:  cmake -B build .
+      - name: Configure cmake
+        run:  cmake -B build .
 
-    - name: Build
-      run:  cmake --build ./build
+      - name: Build
+        run:  cmake --build ./build
 
-    - name: Perform CodeQL Analysis
-      uses: github/codeql-action/analyze@v2
+      - name: Perform CodeQL Analysis
+        uses: github/codeql-action/analyze@v2
