Try another name for action

--- a/.github/workflows/build-container.yml
+++ b/.github/workflows/build-container.yml
@@ -1,10 +1,10 @@
-name: Build container
+name: Aboba
 
 on: [ push ]
 
 jobs:
   build-container:
-    name: Build container
+    name: Aboba
     runs-on: ubuntu-latest
     strategy:
       matrix:
