--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,7 +3,7 @@ name: Linux Test Coverage
 on:
   workflow_run:
     workflows:
-      - Build container
+      - Aboba
     types:
       - completed
 
@@ -11,7 +11,6 @@ jobs:
   test:
     runs-on: ubuntu-20.04
     container: ghcr.io/${{ github.repository }}:latest
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
       - name: Install dependencies
         run: |
