--- a/.github/workflows/build-container.yml
+++ b/.github/workflows/build-container.yml
@@ -3,7 +3,7 @@ name: Aboba
 on: [ push ]
 
 jobs:
-  build-container:
+  gpui-build-container:
     name: Aboba
     runs-on: ubuntu-latest
     strategy:
