--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,13 +16,15 @@ jobs:
     steps:
       - if: ${{ matrix.architecture == 'i386' }}
         run: |
+          docker pull ghcr.io/${{ github.repository }}:latest --platform linux/i386
           docker run --privileged=true -i --log-driver=none -a stdin -a stdout -a stderr -v "$(pwd)":/app \
-          ghcr.io/${{ github.repository }}:${{ github.run_number }} --platform linux/i386
+          ghcr.io/${{ github.repository }}:latest --platform linux/i386
 
       - if: ${{ matrix.architecture == 'amd64' }}
         run: |
+          docker pull ghcr.io/${{ github.repository }}:latest
           docker run --privileged=true -i --log-driver=none -a stdin -a stdout -a stderr -v "$(pwd)":/app \
-          ghcr.io/${{ github.repository }}:${{ github.run_number }}
+          ghcr.io/${{ github.repository }}:latest
 
       - uses: actions/upload-artifact@v3
         with:
