--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,20 +11,11 @@ jobs:
     runs-on: ubuntu-20.04
     container: ghcr.io/${{ github.repository }}:latest
     steps:
-      - name: Install dependencies
-        run: |
-          apt-get update
-          apt-get install -y cmake rpm-macros-cmake cmake-modules gcc-c++ qt5-base-devel qt5-declarative-devel \
-          qt5-tools-devel libsmbclient-devel libsmbclient samba-devel libldap-devel libsasl2-devel libsmbclient-devel \
-          libuuid-devel glib2-devel libpcre-devel libkrb5-devel libgtest-devel qt5-base-common doxygen \
-          libxerces-c-devel xsd boost-devel-headers desktop-file-utils ImageMagick-tools libqt-mvvm-devel xorg-xvfb \
-          xvfb-run rpm-build ctest
-
       - name: Test
         env:
           QT_QPA_PLATFORM: offscreen
         run: |
-          mkdir build && cd build
-          cmake -DCMAKE_BUILD_TYPE:STRING=Debug -DGPUI_BUILD_TESTS:BOOL=ON ..
-          make -j4
+          cmake -B build -DCMAKE_BUILD_TYPE:STRING=Debug -DGPUI_BUILD_TESTS:BOOL=ON ..
+          cd build
+          make -j `nproc`
           make test
