--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,12 +10,14 @@ jobs:
   gpui-test:
     runs-on: ubuntu-20.04
     container: ghcr.io/${{ github.repository }}:latest
+
     steps:
       - name: Test
         env:
           QT_QPA_PLATFORM: offscreen
         run: |
-          cmake -B build -DCMAKE_BUILD_TYPE:STRING=Debug -DGPUI_BUILD_TESTS:BOOL=ON ..
+          cd /app/
+          cmake -B build -DCMAKE_BUILD_TYPE:STRING=Debug -DGPUI_BUILD_TESTS:BOOL=ON .
           cd build
           make -j `nproc`
           make test
