--- a/.github/workflows/publish-api-docs.yml
+++ b/.github/workflows/publish-api-docs.yml
@@ -1,6 +1,6 @@
 name: gpui-publish-api-doc
 
-on: [ push ]
+on: [ workflow_call, workflow_dispatch ]
 
 jobs:
   gpui-publish-api-doc:
@@ -8,7 +8,7 @@ jobs:
 
     steps:
       - name: Git Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Create clean documentation branch
         run:  git checkout -b documentation
