--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,11 +22,13 @@ jobs:
     container: ghcr.io/${{ github.repository }}:latest
 
     steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
       - name: Test
         env:
           QT_QPA_PLATFORM: offscreen
         run: |
-          cd /app/
           cmake -B build -DCMAKE_BUILD_TYPE:STRING=Debug -DGPUI_BUILD_TESTS:BOOL=ON .
           cd build
           make -j `nproc`
