--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -25,7 +25,10 @@ jobs:
         run:  cmake -B build .
 
       - name: Build
-        run:  cmake --build ./build
+        run: |
+          cd build
+          make -j `nproc`
+          make test
 
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v2
