--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,20 +24,19 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - if: ${{ inputs.architecture == 'i386' }}
-        run: |
-          docker pull ghcr.io/${{ github.repository }}:latest --platform linux/i386
-          docker run --privileged=true -i --log-driver=none -a stdin -a stdout -a stderr -v "$(pwd)":/app \
-          ghcr.io/${{ github.repository }}:latest --platform linux/i386
-
-      - if: ${{ inputs.architecture == 'amd64' }}
+      - name: Build
         run: |
           docker pull ghcr.io/${{ github.repository }}:latest
-          docker run --privileged=true -i --log-driver=none -a stdin -a stdout -a stderr -v "$(pwd)":/app \
-          ghcr.io/${{ github.repository }}:latest
+          docker run --privileged=true --name gpui-build-${{ inputs.architecture }} -i --log-driver=none \
+          -a stdin -a stdout -a stderr -v "$(pwd)":/app ghcr.io/${{ github.repository }}:latest \
+          --platform linux/${{ inputs.architecture }}
+
+      - name: Extract packages
+        run: |
+          docker cp gpui-build-${{ inputs.architecture }}:/home/builder2/RPM/RPMS/x86_64 "$(pwd)/packages"
 
       - name: Upload fresh RPM packages
         uses: actions/upload-artifact@v3
         with:
           name: gpui-${{ inputs.artifact }}-${{ inputs.architecture }}
-          path: /home/builder2/RPM/RPMS/x86_64/
+          path: ${{ github.workspace }}/packages
