--- a/.github/workflows/build-container.yml
+++ b/.github/workflows/build-container.yml
@@ -15,6 +15,8 @@ on:
 jobs:
   gpui-build-container:
     runs-on: ubuntu-latest
+    permissions:
+      packages: write
 
     steps:
       - name: Checkout
