--- a/.github/workflows/build-container.yml
+++ b/.github/workflows/build-container.yml
@@ -31,6 +31,14 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
+      - name: Set output variables
+        id: vars
+        run: |
+          user_id="$(id -u)"
+          group_id="$(id -g)"
+          echo "user_id=$user_id" >> $GITHUB_OUTPUT
+          echo "group_id=$group_id" >> $GITHUB_OUTPUT
+
       - name: Build and push container to the registry
         uses: docker/build-push-action@v4
         with:
@@ -44,5 +52,5 @@ jobs:
           build-args: |
             DISTR=${{ inputs.distr }}
             ARCH=${{ inputs.architecture }}
-            USER_ID=1001
-            GROUP_ID=121
+            USER_ID=${{ steps.vars.outputs.user_id }}
+            GROUP_ID=${{ steps.vars.outputs.group_id }}
