Try to utilize mode caching by having separate cache between branches and archetectures

--- a/.github/workflows/build-container.yml
+++ b/.github/workflows/build-container.yml
@@ -46,8 +46,8 @@ jobs:
             ghcr.io/${{ github.repository }}-${{ inputs.architecture }}:${{ github.run_number }}
             ghcr.io/${{ github.repository }}-${{ inputs.architecture }}:latest
           push: true
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+          cache-from: type=gha,scope=$GITHUB_REF_NAME-${{ inputs.architecture }}-image
+          cache-to: type=gha,mode=max,scope=$GITHUB_REF_NAME-${{ inputs.architecture }}-image
           platforms: ${{ inputs.architecture }}
           build-args: |
             DISTR=${{ inputs.distr }}
