--- a/.github/workflows/build-container.yml
+++ b/.github/workflows/build-container.yml
@@ -21,36 +21,18 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Login to GitHub Container Registry
-        uses: docker/login-action@v2
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.github_token }}
-          logout: false
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      - name: Set output variables
-        id: vars
         run: |
-          user_id="$(id -u)"
-          group_id="$(id -g)"
-          echo "user_id=$user_id" >> $GITHUB_OUTPUT
-          echo "group_id=$group_id" >> $GITHUB_OUTPUT
+          docker login ghcr.io -u ${{ github.actor }} -p ${{ secrets.github_token }}
 
-      - name: Build and push container to the registry
-        uses: docker/build-push-action@v4
-        with:
-          tags: |
-            ghcr.io/${{ github.repository }}-${{ inputs.architecture }}:${{ github.run_number }}
-            ghcr.io/${{ github.repository }}-${{ inputs.architecture }}:latest
-          push: true
-          cache-from: type=gha,scope=$GITHUB_REF_NAME-${{ inputs.architecture }}-image
-          cache-to: type=gha,mode=max,scope=$GITHUB_REF_NAME-${{ inputs.architecture }}-image
-          platforms: ${{ inputs.architecture }}
-          build-args: |
-            DISTR=${{ inputs.distr }}
-            ARCH=${{ inputs.architecture }}
-            USER_ID=${{ steps.vars.outputs.user_id }}
-            GROUP_ID=${{ steps.vars.outputs.group_id }}
+      - name: Build container
+        run: |
+          docker buildx build -t ghcr.io/${{ github.repository }}-${{ inputs.architecture }}:${{ github.run_number }} \
+          -t ghcr.io/${{ github.repository }}-${{ inputs.architecture }}:latest \
+          --cache-from type=gha,scope=$GITHUB_REF_NAME-${{ inputs.architecture }}-image \
+          --cache-to type=gha,mode=max,scope=$GITHUB_REF_NAME-${{ inputs.architecture }}-image \
+          --build-arg DISTR=${{ inputs.distr }} --build-arg ARCH=${{ inputs.architecture }} \
+          --build-arg USER_ID=$(id -u) --build-arg GROUP_ID=$(id -g) --platform ${{ inputs.architecture }} .
+
+      - name: Push container
+        run: |
+          docker push -a ghcr.io/${{ github.repository }}-${{ inputs.architecture }}
