feat: improve continuous integration process (#36)
Description:
    Add docker buildx to create containers.
    Resolve problems with CodeQL.
    Update CI pipeline and separate main workflow into pieces. Add build, build container and test workflows.

History:
* Test build and push action
* Update CodeQL analysis from v1 to v2
* Add dependencies
* Use Ninja instead of GNU Make
* Switch back to GNU Make & fix main CI
* Fix tabs in main.yml
* Add build arguments
* Change mode to github actions
* Add run stage
* Push to ghcr
* Bump up of action versions
* Run container
* Use same image in test
* Separate workflow for build docker image
* Try another name for action
* All on push
* Proper names
* Correct order
* Add sudo in test
* No sudo
* Add ctest as dependency in Dockerfile and pull image first in build
* Main workflow to run others as jobs
* Fix order
* Checkout to code in build
* Checkout in tests
* Run CodeQL in same container
* Speed up CodeQL build by using Make directly
* Mount RPM directory
* Test on i386 also
* Removed unused parameters and pull specific platform in build
* Set target for gear-rpm
* Back to 2 images
* Set permissions for packages
* Get uid and gid
* Remove QEMU
* Try to utilize mode caching by having separate cache between branches and architectures
* Try not to use actions

--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -1,43 +1,40 @@
-name: "CodeQL"
+name: gpui-codeql-analysis
 
-on: [ push, pull_request ]
+on:
+  workflow_call:
+    inputs:
+      architecture:
+        description: "Architecture"
+        type: string
+        required: true
 
 jobs:
-  analyze:
-    name: Analyze
-    runs-on: ubuntu-latest
-    container: alt:p9
+  gpui-codeql-analysis:
+    runs-on: ubuntu-20.04
+    container: ghcr.io/${{ github.repository }}-${{ inputs.architecture }}:latest
 
     permissions:
       actions: read
       contents: read
       security-events: write
 
-    strategy:
-      fail-fast: false
-      matrix:
-        language: [ 'cpp' ]
-
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-    - name: Initialize CodeQL
-      uses: github/codeql-action/init@v1
-      with:
-        languages: ${{ matrix.language }}
+      - name: Initialize CodeQL
+        uses: github/codeql-action/init@v2
+        with:
+          languages: cpp
 
-    - name: Update software
-      run:  apt-get update
+      - name: Configure cmake
+        run:  cmake -B build .
 
-    - name: Install software
-      run:  apt-get install -y git cmake rpm-macros-cmake cmake-modules gcc-c++ qt5-base-devel qt5-tools-devel qt5-base-common doxygen libxerces-c-devel xsd rpm-build
+      - name: Build
+        run: |
+          cd build
+          make -j `nproc`
+          make test
 
-    - name: Configure cmake
-      run:  mkdir build && cd build && cmake -DCMAKE_C_COMPILER=`which gcc` -DCMAKE_CXX_COMPILER=`which g++` -DCMAKE_MAKE_PROGRAM=`which make` ..
-
-    - name: Make software
-      run:  cd build && make -j `nproc`
-
-    - name: Perform CodeQL Analysis
-      uses: github/codeql-action/analyze@v1
+      - name: Perform CodeQL Analysis
+        uses: github/codeql-action/analyze@v2
