--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,39 +1,27 @@
-name: Linux Test Coverage
+name: gpui-test
 
 on:
-  workflow_run:
-    workflows: ["GPUI CI"]
-    types:
-      - completed
+  workflow_call:
+    inputs:
+      architecture:
+        description: "Architecture"
+        type: string
+        required: true
 
 jobs:
-  coverage:
+  gpui-test:
     runs-on: ubuntu-20.04
-    container: alt:p10
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
-
-    permissions:
-      actions: read
-      contents: read
-      security-events: write
+    container: ghcr.io/${{ github.repository }}-${{ inputs.architecture }}:latest
 
     steps:
-    - name: Get sources
-      uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v3
 
-    - name: Install dependencies
-      run: |
-        apt-get update
-        apt-get install -y cmake rpm-macros-cmake cmake-modules gcc-c++ qt5-base-devel qt5-declarative-devel \
-        qt5-tools-devel libsmbclient-devel libsmbclient samba-devel libldap-devel libsasl2-devel libsmbclient-devel \
-        libuuid-devel glib2-devel libpcre-devel libkrb5-devel libgtest-devel qt5-base-common doxygen libxerces-c-devel \
-        xsd boost-devel-headers desktop-file-utils ImageMagick-tools libqt-mvvm-devel xorg-xvfb xvfb-run rpm-build ctest
-
-    - name: Test
-      env:
-        QT_QPA_PLATFORM: offscreen
-      run: |
-        mkdir build && cd build
-        cmake -DCMAKE_C_COMPILER=`which gcc` -DCMAKE_CXX_COMPILER=`which g++` -DCMAKE_MAKE_PROGRAM=`which make` -DCMAKE_CTEST_COMMAND=`which ctest` -DCMAKE_BUILD_TYPE:STRING=Debug -DGPUI_BUILD_TESTS:BOOL=ON ..
-        make -j4
-        make test
+      - name: Test
+        env:
+          QT_QPA_PLATFORM: offscreen
+        run: |
+          cmake -B build -DCMAKE_BUILD_TYPE:STRING=Debug -DGPUI_BUILD_TESTS:BOOL=ON .
+          cd build
+          make -j `nproc`
+          make test
