feat: add check for compiler flag support

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,7 +9,10 @@ if (CMAKE_COMPILER_IS_GNUCXX AND NOT WIN32)
         -Woverloaded-virtual -Wredundant-decls -Wshadow -Wstrict-null-sentinel -Wundef \
         -Wno-unused -Wno-variadic-macros -Wno-parentheses -Wnonnull -fdiagnostics-show-option")
     if(CMAKE_SIZEOF_VOID_P LESS_EQUAL 4)
-        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=i586")
+        CHECK_CXX_COMPILER_FLAG("-march=i586" COMPILER_SUPPORTS_MARCH_I586)
+        if (${COMPILER_SUPPORTS_MARCH_I586})
+            set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=i586")
+        endif()
     endif()
   endif()
 endif()
