--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,7 @@ set(GPUI_DIR "${CMAKE_BINARY_DIR}")
 include(TranslationUtils)
 include(FindXsd)
 include(FindLdap)
+include(XsdUtils)
 include(CheckCXXCompilerFlag)
 
 if(UNIX)
