feat: add cmtl schema

--- a/src/plugins/cmtl/CMakeLists.txt
+++ b/src/plugins/cmtl/CMakeLists.txt
@@ -14,3 +14,5 @@ add_gpui_plugin(cmtl-plugin ${SOURCES})
 target_link_libraries(cmtl-plugin Qt5::Core)
 target_link_libraries(cmtl-plugin ${GPUI_LIBRARIES} policy-common)
 target_link_libraries(cmtl-plugin xerces-c)
+
+add_subdirectory(schema)
