--- a/src/plugins/cmtx/CMakeLists.txt
+++ b/src/plugins/cmtx/CMakeLists.txt
@@ -14,3 +14,5 @@ add_gpui_plugin(cmtx-plugin ${SOURCES})
 target_link_libraries(cmtx-plugin Qt5::Core)
 target_link_libraries(cmtx-plugin ${GPUI_LIBRARIES} policy-common)
 target_link_libraries(cmtx-plugin xerces-c)
+
+add_subdirectory(schema)
