chore: refactor preferences cmakelists.txt to use xsdutils

--- a/src/plugins/preferences/schemas/CMakeLists.txt
+++ b/src/plugins/preferences/schemas/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_policy(SET CMP0071 NEW)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")
 
 set(XSD_FILES
     "${CMAKE_CURRENT_SOURCE_DIR}/datasourcesschema.xsd"
@@ -20,44 +20,4 @@ set(XSD_FILES
     "${CMAKE_CURRENT_SOURCE_DIR}/variablesschema.xsd"
 )
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")
-
-foreach(FILE ${XSD_FILES})
-    string(REGEX REPLACE "[.]xsd" ".h" HEADER ${FILE})
-    set(HEADERS ${HEADERS} ${HEADER})
-endforeach()
-
-foreach(FILE ${XSD_FILES})
-    string(REGEX REPLACE "[.]xsd" ".cpp" SOURCE ${FILE})
-    set(SOURCES ${SOURCES} ${SOURCE})
-endforeach()
-
-set(OUT_FILES
-    ${HEADERS}
-    ${SOURCES}
-)
-
-set(XSD_FLAGS cxx-tree
-    --generate-doxygen
-    --generate-ostream
-    --generate-serialization
-    --generate-polymorphic
-    --polymorphic-type-all
-    --generate-wildcard
-    --cxx-suffix .cpp
-    --hxx-suffix .h
-    --std c++11
-    --type-naming ucc
-    --root-element-all
-)
-
-add_custom_command(
-    OUTPUT ${OUT_FILES}
-    COMMAND ${XSDCXX_EXECUTABLE} ${XSD_FLAGS} ${XSD_FILES}
-    DEPENDS ${XSD_FILES}
-    COMMENT "Running ${XSDCXX_EXECUTABLE} ${XSD_FLAGS} ${XSD_FILES}"
-    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
-    COMMAND_EXPAND_LISTS
-)
-
-add_library(static_xsd_library STATIC ${OUT_FILES})
+add_xsd_library(static_xsd_library ${XSD_FILES})
