feat: add cmtl plugin format

--- a/src/plugins/cmtl/CMakeLists.txt
+++ b/src/plugins/cmtl/CMakeLists.txt
@@ -4,15 +4,18 @@ include_directories(${GPUI_INCLUDE_DIRS})
 find_package(Qt5 COMPONENTS Core REQUIRED)
 
 set(HEADERS
+    cmtlformat.h
 )
 
 set(SOURCES
+    cmtlformat.cpp
     cmtlplugin.cpp
 )
+
+add_subdirectory(schema)
 
 add_gpui_plugin(cmtl-plugin ${SOURCES})
 target_link_libraries(cmtl-plugin Qt5::Core)
 target_link_libraries(cmtl-plugin ${GPUI_LIBRARIES} policy-common)
 target_link_libraries(cmtl-plugin xerces-c)
-
-add_subdirectory(schema)
+target_link_libraries(cmtl-plugin cmtl_xsd_library)
