feat: add policy comment file

--- a/src/io/CMakeLists.txt
+++ b/src/io/CMakeLists.txt
@@ -7,6 +7,7 @@ set(HEADERS
     genericreader.inl
     inifile.h
     io.h
+    policycommentsfile.h
     policydefinitionsfile.h
     policyresourcesfile.h
     policyfileformat.h
@@ -16,9 +17,10 @@ set(HEADERS
     registryfileformat.inl
 )
 
-set(SOURCES    
+set(SOURCES
     inifile.cpp
     io.cpp
+    policycommentsfile.cpp
     policydefinitionsfile.cpp
     policyresourcesfile.cpp
     registryfile.cpp
@@ -27,6 +29,8 @@ set(SOURCES
 add_definitions(
     -DGPUI_IO_LIBRARY
 )
+
+set(SOURCES ${SOURCES} ${HEADERS})
 
 add_gpui_library(gpui-io ${SOURCES})
 target_link_libraries(gpui-io Qt5::Core)
