--- a/src/plugins/comments/CMakeLists.txt
+++ b/src/plugins/comments/CMakeLists.txt
@@ -14,6 +14,8 @@ set(HEADERS
     commentdefinitionresources.h
     localizationresourcereference.h
     policycomments.h
+    policynamespace.h
+    policynamespaceassociation.h
 )
 
 set(SOURCES
